# adaptive_quaternion_control_of_quadrotor

./: .gitignore  CMakeLists.txt  K_matrix  README.md  calc_lqr.py  data.bag  package.xml  record_data  ±
docs/plots/: 01_att_square_tracking_attitude.eps  01_att_square_tracking_attitude_closeup.eps  01_att_square_tracking_inputs.eps  02_att_weight_attitude.eps  02_att_weight_dist.eps  03_pos_tracking.eps  04_pos_tracking_dist.eps  04_pos_tracking_weight.eps  04_pos_tracking_weight_attitude.eps  plot_data.m
include/controller/: .adaptive_controller.h.swp  adaptive_controller.h  attitude_controller.h  position_controller.h
include/plot/: data_exporter.h
include/simulate/: signal_generators.h
include/tools/: quat.h
launch/: multirotor.launch
plot/: plotter.py
simulation/: CMakeLists.txt
simulation/include/controller/: attitude_controller.h  position_controller.h
simulation/include/dynamics/: dynamics.h
simulation/include/plot/: plotter.h
simulation/include/simulate/: controller_drake.h  signal_generators.h  simulate.h  simulate_drake.h
simulation/include/tools/: quat.h
simulation/src/: main.cpp
simulation/src/controller/: attitude_controller.cpp  position_controller.cpp
simulation/src/dynamics/: dynamics.cpp
simulation/src/plot/: plotter.cpp
simulation/src/simulate/: controller_drake.cpp  signal_generators.cpp  simulate.cpp  simulate_drake.cpp
simulation/src/tools/: quat.cpp
src/: main.cpp
src/controller/: .adaptive_controller.cpp.swp  adaptive_controller.cpp  attitude_controller.cpp  position_controller.cpp
src/plot/: data_exporter.cpp
src/simulate/: simulate.cpp
src/tools/: quat.cpp
